--- a/VRChat/42/1321242.html
+++ b/VRChat/42/1321242.html
@@ -77,9 +77,9 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "sagiririri" data-product-category="127" data-product-id=
-        "1321242" data-product-list="market_show"
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="sagiririri" data-product-category="127"
+        data-product-id="1321242" data-product-list="market_show"
         data-product-price="160" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
@@ -103,17 +103,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -124,13 +124,13 @@
                             <img alt="S.R.L" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/3317726/icon_image/38c2b361-ddfe-41d8-b15b-a5a7f8ca7081_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               S.R.L
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           [0yenアリ]小中学生向け名札[2種]
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -269,18 +269,16 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1321242"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "[0yenアリ]小中学生向け名札[2種] | S.R.L"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1321242"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text="[0yenアリ]小中学生向け名札[2種] | S.R.L"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1321242"
@@ -290,7 +288,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -323,8 +321,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             この度は当ページをご覧いただきありがとうございます。さぎりです。また前回と同じ書き始め方になりました。しかしそこは関係ありません！今回のお品はこれ。さぎりの名札…ではなくその元のモデルですね。
                             最近すごいVR小学生増えてませんかね？さぎりの身の回りでは小学性がたくさんいます。いいですね、わちゃこら動いて大変に愛くるしいです。そこでさぎりは思いつきました。名札付けたらもっと&lt;s&gt;業が深くなる&lt;/s&gt;それっぽくなるのではと。はい作るしかないですね作りました。紙がビニールケースに入ってるタイプとプラスチックに名前が印刷とか刻印とかされてるタイプです。前者は小学校で、後者は中学校でお世話になったおかたが多いのではないでしょうか。さぎりの学校では小学校で後者のスタイル。中学校では名札が無くなりました。ちゅらいです。
                             前回の説明文で長い！短くして！ばか！って言われたのでこの辺にしておきます。はい。
@@ -340,8 +338,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
